--- a/apps/examples/xmodem_leds/README
+++ b/apps/examples/xmodem_leds/README
@@ -20,7 +20,8 @@ run
 xmodem_send.py strip.bin
 
 you should see the first 63 pixels light up purple. The starting image
-has pixel 9 lit.
+has pixel 9 lit. You may need to install serial port/xmodem librarys
+for Python; Google should tell you how if you need to.
 
 The script write_file.py is a very simple python script that lets 
 you easily write new display for your strip.
